--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
-<h1>
+<div class="container">
+  <div class="row">
+  <h1 class="col-lg-6">
   {{title}}
 </h1>
+</div>
+</div>
 <router-outlet></router-outlet>
